--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 	<div id="alerts">
 		<div class="pl-2 mt-3 mb-4">
 			<h1>Alert</h1>
-			<p>Alert renklendirmeleri konusunda <b>::root</b> içerisndeki renk tanımlamalarının tamamıyla uyumludur. <b>fprimary | fsecondary | fred | f*root-renk-adi*</b> şeklinde kullanılabilir.</p>
+			<p>Alert renklendirmeleri konusunda <b>::root</b> içerisndeki renk tanımlamalarının tamamıyla uyumludur. <b>fc-primary | fc-secondary | fc-red | fc-*root-renk-adi*</b> şeklinde kullanılabilir.</p>
 			<p>Alert'in kapatılabilir durumları için <b>alert-closable</b> tanımı root div'e class olarak eklenmeli ve close-icon konulmalıdır.</p>
 			<p><b>NOT: Bu alanda istenilen her türlü ikon kullanılabilir. ion-icon tavsiye edilir.</b></p>
 		</div>
